setup the project v 2.0

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
 # Database Configuration
-MONGO_URL=mongodb://localhost:27017/your-database-name
+MONGO_URL=mongodb://localhost:27017/codegamy
 
 # Authentication
-NEXTAUTH_SECRET=your-nextauth-secret-key-here
-
-# Jitsi Meet Integration (for video interviews)
-NEXT_PUBLIC_JAAS_APP_ID=your-jaas-app-id-here
+NEXTAUTH_SECRET=K8f3Jk9sL2mPq7XvR4tYwZ1aBcDeFgHiJkLmNoPqRsT=
+NEXTAUTH_URL=http://localhost:3000
 
 # Server Configuration
 PORT=5000
