--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cognicode",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -26,7 +26,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "fs": "^0.0.1-security",
+    "gsap": "^3.14.2",
     "js-cookie": "^3.0.5",
+    "locomotive-scroll": "^3.5.4",
     "mongoose": "^9.1.5",
     "next": "^16.1.4",
     "next-auth": "^4.24.13",
